src/test/ui/no_send-rc.stderr
error[E0277]: `Rc<{integer}>` cannot be sent between threads safely
  --> $DIR/no_send-rc.rs:7:9
   |
LL | fn bar<T: Send>(_: T) {}
   |           ---- required by this bound in `bar`
...
LL |     bar(x);
   |         ^ `Rc<{integer}>` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `Rc<{integer}>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
